# part-2

./: .gitignore  README.md  pyproject.toml
data/: Yeast.arff
data/unused/: Delicious.arff  Enron.arff
notebooks/: 01. A Case Study for Knowledge Injection in ML.ipynb  01. Knowledge Injection in ML.ipynb  02. Knowledge Injection in ML.ipynb  02. Knowledge Injection via Lagrangian Approaches.ipynb  03. Knowledge Injection in RUL estimation.ipynb  03. Knowledge Injection via Lagrangian Approaches.ipynb  04. A Case Study for Constrained Machine Learning.ipynb  04. Knowledge Injection in RUL estimation.ipynb  04. Lagrangian Approaches for Constrained Machine Learning.ipynb  05. Lagrangian Approaches for Constrained Machine Learning.ipynb  06. Constrained ML via Data Projection.ipynb  07. The ADMM.ipynb  08. Data Projection on the Fairness Use Case.ipynb  09. Constrained ML via Output Projection.ipynb  10. Iterated Projection.ipynb  11. A Case Study for Moving Targets.ipynb  12. Learning ODEs.ipynb  13. Better Learning for ODEs.ipynb  14. Universal Ordinary Differential Equations.ipynb  X. A Case Study for Moving Target.ipynb  X. Click-Through Rate Prediction .ipynb  X. Constrained ML via Projection.ipynb  X. Constraints via Data Projection.ipynb  X. Constraints via Inference Time Projection.ipynb  X. Lagrangian Approaches for Constrained Machine Learning.ipynb  X. Lattice Models.ipynb  X1. Learning ODEs.ipynb  X2. Better Learning for ODEs.ipynb  X3. Universal Ordinary Differential Equations.ipynb  X4. (extra) The Alternating Method of Multipliers.ipynb  print-pdf.sh
(+1 files in other folders)
